--- a/backend/price_comparison/src/main/resources/application.properties
+++ b/backend/price_comparison/src/main/resources/application.properties
@@ -11,3 +11,13 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 # 日志设置
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+api.similarity.url=http://localhost:5000/similarity
+
+dictionary.paths.jd=/dictionary/jdDict.csv
+dictionary.paths.taobao=/dictionary/taobaoDict.csv
+dictionary.paths.tmall=/dictionary/tmallDict.csv
+dictionary.paths.vip=/dictionaryvipDict.csv
+
+hanlp.similarity.path=https://hanlp.hankcs.com/api/semantic_textual_similarity
+hanlp.auth=NjY2NkBiYnMuaGFubHAuY29tOkxvNldXV09nd3h2eTc3VTQ=
