--- a/backend/price_comparison/pom.xml
+++ b/backend/price_comparison/pom.xml
@@ -103,7 +103,28 @@
 			<groupId>com.hankcs.hanlp.restful</groupId>
 			<artifactId>hanlp-restful</artifactId>
 			<version>0.0.15</version>
-		  </dependency>
+		</dependency>
+		<dependency>
+			<groupId>com.hankcs</groupId>
+			<artifactId>hanlp</artifactId>
+			<version>portable-1.8.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.21.0</version> <!-- 请根据需要更新到最新版本 -->
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-edge-driver</artifactId>
+			<version>4.21.0</version> <!-- 请根据需要更新到最新版本 -->
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.11.0</version> <!-- 使用最新版本 -->
+		</dependency>
+		
 	</dependencies>
 
 	<build>
