--- a/price_comparison/src/main/resources/application.properties
+++ b/price_comparison/src/main/resources/application.properties
@@ -19,5 +19,8 @@ dictionary.paths.taobao=/dictionary/taobaoDict.csv
 dictionary.paths.tmall=/dictionary/tmallDict.csv
 dictionary.paths.vip=/dictionaryvipDict.csv
 
-hanlp.similarity.path=https://hanlp.hankcs.com/api/semantic_textual_similarity
+hanlp.api.url=https://hanlp.hankcs.com/api
+
 hanlp.auth=NjY2NkBiYnMuaGFubHAuY29tOkxvNldXV09nd3h2eTc3VTQ=
+
+egde.driver.local.path=D:/edgedriver_win64/msedgedriver.exe
