--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -6,11 +6,14 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/your-repo/config-repo  # 配置文件存放的 Git 仓库
-          searchPaths: config-files                  # Git 仓库中的路径
-        # 如果使用本地文件系统，可以替换为 file:///path/to/config/files
+          uri: https://github.com/Hzeristo/price_comparison  # 配置文件存放的 Git 仓库
+          searchPaths: config-server/src/main/resources/conf                 # Git 仓库中的路径
 
   eureka:
     client:
       service-url:
         defaultZone: http://localhost:8761/eureka/  # Eureka 服务注册中心地址
+      registerWithEureka: true  # 是否注册到 Eureka
+      fetchRegistry: true  # 是否从 Eureka 获取服务注册信息
+      instance:
+        hostname: main-service-host  # 服务实例的主机名
